# Traffic-Simulation-Management-System

./: Cargo.toml
benches/: engine_benchmark.rs
benches/helpers/: analyzer.rs  light.rs  mod.rs
src/: analyzer.rs  grid.rs  light.rs  main.rs  point.rs  vehicle.rs
src/helpers/: grid.rs  message.rs  point.rs  variables.rs  vehicle.rs
