[package]
name = "testing_git"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
tokio = { version = "1.44.2", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "engine_benchmark"
harness = false
